--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "contentful": "^11.7.15",
+    "next": "^16.0.2-canary.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "sass": "^1.92.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
