--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,15 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Path mapping */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@layout": ["./src/components/layout"],
+      "@layout/*": ["./src/components/layout/*"]
+    }
   },
   "include": ["src"]
 }
