--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-portfolio",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -22,11 +22,14 @@
     "vite": "^6.0.5"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "semantic-release": "^24.0.0",
     "typescript": "^5.6.3"
   }
 }
