--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -8,7 +8,7 @@ jobs:
   bump-version:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -18,13 +18,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
+          node-version: '24'
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       - name: Configure Git
         run: |
@@ -32,7 +33,7 @@ jobs:
           git config --local user.name "GitHub Action"
 
       - name: Bump patch version
-        run: npm version patch
+        run: yarn version --patch
 
       - name: Push changes
         run: git push origin HEAD --follow-tags
