--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,6 +5,8 @@
   "trailingComma": "es5",
   "printWidth": 100,
   "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
+  "tailwindConfig": "./tailwind.config.mjs",
+  "tailwindFunctions": ["clsx", "cn", "cva"],
   "overrides": [
     {
       "files": "*.astro",
