--- a/.github/workflows/conventional-commits.yml
+++ b/.github/workflows/conventional-commits.yml
@@ -14,36 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: read
+      pull-requests: write
+      statuses: write
+      checks: write
 
     steps:
       - name: Validate PR Title
-        uses: amannn/action-semantic-pull-request@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: deepakputhraya/action-pr-title@master
         with:
-          # Configure which types are allowed
-          types: |
-            feat
-            fix
-            docs
-            style
-            refactor
-            perf
-            test
-            build
-            ci
-            chore
-            revert
-          # Configure which scopes are allowed (optional)
-          scopes: |
-            deps
-            release
-            config
-            ui
-            api
-            core
-          # Configure that a scope is required (optional, default: false)
-          requireScope: false
-          # Allow work-in-progress PRs with [WIP] prefix
-          wip: true
+          regex: '^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\(.+\))?: .+'
+          allowed_prefixes: 'feat,fix,docs,style,refactor,perf,test,build,ci,chore,revert'
+          prefix_case_sensitive: false
