--- a/package.json
+++ b/package.json
@@ -12,24 +12,19 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/tailwind": "^6.0.2",
-    "astro": "^5.0.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.19",
-    "vite": "^6.0.5"
+    "@astrojs/check": "^0.9.6",
+    "@tailwindcss/postcss": "^4.1.18",
+    "astro": "^5.16.11",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "semantic-release": "^25.0.2",
-    "typescript": "^5.6.3"
+    "semantic-release": "25.0.2",
+    "typescript": "^5.9.3"
   }
 }
