--- a/.releaserc.json
+++ b/.releaserc.json
@@ -15,7 +15,8 @@
       "@semantic-release/git",
       {
         "assets": ["CHANGELOG.md", "package.json"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
+        "prepareCmd": "prettier --write CHANGELOG.md"
       }
     ]
   ]
